--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:thymeleafdb
-spring.datasource.username=h2
-spring.datasource.password=h2
-spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/workshop
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
+
+#spring.datasource.url=jdbc:h2:mem:demo
+#spring.datasource.username=h2
+#spring.datasource.password=h2
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=create
+
+spring.security.user.name=user
+spring.security.user.password=123
