--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:mariadb://localhost:3306/workshop
 spring.datasource.username=root
 spring.datasource.password=root1234
@@ -13,3 +12,10 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.security.user.name=user
 spring.security.user.password=123
+
+keycloak.auth-server-url=http://localhost:8180/
+keycloak.realm=soetek
+keycloak.resource=login-web
+keycloak.public-client=true
+keycloak.credentials.secret = Wqn4lyVzol79CLA7ZZJTMQB24i3Uj385
+
